Create news posts

--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -1,6 +1,7 @@
 
 @inproceedings{hogan_cs0_2023,
 	address = {Toronto ON Canada},
+	selected={true},
 	title = {{CS0} vs. {CS1}:: {Understanding} {Fears} and {Confidence} amongst {Non}-majors in {Introductory} {CS} {Courses}},
 	isbn = {978-1-4503-9431-4},
 	shorttitle = {{CS0} vs. {CS1}},
@@ -70,6 +71,7 @@
 
 @phdthesis{hogan_role_2021,
 	type = {Undergraduate {Honors} {Thesis}},
+	selected={true},
 	title = {The {Role} of {Technology} in {Supporting} the {Learning} {Needs} of {All} {Levels} of {Incarcerated} {Students}: {A} {Supplement}, not a {Replacement}},
 	url = {https://cdm15739.contentdm.oclc.org/digital/collection/p15739coll1/id/337/rec/1},
 	abstract = {This research contributes to answering this question of how to improve correctional
