Add links for first author publications

--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -75,6 +75,7 @@
 @phdthesis{hogan_role_2021,
 	type = {Undergraduate {Honors} {Thesis}},
 	selected={true},
+	html={https://cdm15739.contentdm.oclc.org/digital/collection/p15739coll1/id/337/rec/1}
 	title = {The {Role} of {Technology} in {Supporting} the {Learning} {Needs} of {All} {Levels} of {Incarcerated} {Students}: {A} {Supplement}, not a {Replacement}},
 	url = {https://cdm15739.contentdm.oclc.org/digital/collection/p15739coll1/id/337/rec/1},
 	abstract = {This research contributes to answering this question of how to improve correctional
@@ -112,7 +113,7 @@ recommendations on the role technology should have in the future of correctional
 	file = {Snapshot:/Users/emmahogan/Zotero/storage/FWD7LZ92/opinion-washingtons-doc-is-trapping-incarcerated-men-in-solitary-confinement.html:text/html},
 }
 
-@misc{hogan_locked_2021,
+@article{hogan_locked_2021,
 	title = {Locked out of life-saving education programs},
 	url = {https://www.postprisonedu.org/blog/eduaccess},
 	abstract = {Front facing, on their letterhead and websites, the Washington State Department of Corrections and legislature verbalize what they believe the voting public wants to read and hear.\&nbsp; However, behind closed doors, in caucus, in action, in reality, they are locking prisoners out of educational},
