--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -75,7 +75,7 @@
 @phdthesis{hogan_role_2021,
 	type = {Undergraduate {Honors} {Thesis}},
 	selected={true},
-	html={https://cdm15739.contentdm.oclc.org/digital/collection/p15739coll1/id/337/rec/1}
+	html={https://cdm15739.contentdm.oclc.org/digital/collection/p15739coll1/id/337/rec/1},
 	title = {The {Role} of {Technology} in {Supporting} the {Learning} {Needs} of {All} {Levels} of {Incarcerated} {Students}: {A} {Supplement}, not a {Replacement}},
 	url = {https://cdm15739.contentdm.oclc.org/digital/collection/p15739coll1/id/337/rec/1},
 	abstract = {This research contributes to answering this question of how to improve correctional
