Try again to fix bibtex

--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -103,7 +103,7 @@ recommendations on the role technology should have in the future of correctional
 @article{hogan_opinion_2021,
 	title = {{OPINION}: {Washington}’s {DOC} {Is} {Trapping} {Incarcerated} {Men} in {Solitary} {Confinement}},
 	shorttitle = {{OPINION}},
-	url = {https://southseattleemerald.com/2021/07/28/opinion-washingtons-doc-is-trapping-incarcerated-men-in-solitary-confinement/},
+	html = {https://southseattleemerald.com/2021/07/28/opinion-washingtons-doc-is-trapping-incarcerated-men-in-solitary-confinement/},
 	language = {en-US},
 	urldate = {2024-01-25},
 	journal = {South Seattle Emerald},
@@ -113,9 +113,9 @@ recommendations on the role technology should have in the future of correctional
 	file = {Snapshot:/Users/emmahogan/Zotero/storage/FWD7LZ92/opinion-washingtons-doc-is-trapping-incarcerated-men-in-solitary-confinement.html:text/html},
 }
 
-@article{hogan_locked_2021,
+@misc{hogan_locked_2021,
 	title = {Locked out of life-saving education programs},
-	url = {https://www.postprisonedu.org/blog/eduaccess},
+	html = {https://www.postprisonedu.org/blog/eduaccess},
 	abstract = {Front facing, on their letterhead and websites, the Washington State Department of Corrections and legislature verbalize what they believe the voting public wants to read and hear.\&nbsp; However, behind closed doors, in caucus, in action, in reality, they are locking prisoners out of educational},
 	language = {en-US},
 	urldate = {2024-01-25},
