--- a/_bibliography/Exported Items.bib
+++ b/_bibliography/Exported Items.bib
@@ -1,15 +1,12 @@
 
 @inproceedings{hogan_cs0_2023,
 	address = {Toronto ON Canada},
-	selected={true},
-	abstract={Previous research has been devoted to improving the experience of non-majors in introductory CS courses. In this study, we compare the experiences of non-majors in two different introductory CS courses, specifically with respect to fears about taking the course and change in confidence levels. CS0 is a computing course intentionally designed for non-majors, and CS1 is a more traditional introductory computing course. Both of these courses were composed primarily of non-majors and were taught by the same instructor. Survey data was collected from 124 students enrolled in CS0, and 502 students enrolled in CS1. Through qualitative analysis, we found that the fears of non-major students entering both of these introductory CS courses fell into one or more of nine distinct categories (e.g., Coding, Perceiving STEM as Difficult, Managing Workload). Additionally, using students' confidence levels at the beginning and end of the courses, we found that students in CS0 had a greater increase in confidence level than those in CS1. Finally, we explored connections between students' fears and how their confidence changed by the end of the course. We found that students across both courses with fears related to coding, lack of preparation, and being left behind had the highest average increase in confidence levels.},
-	html={https://dl.acm.org/doi/10.1145/3545945.3569865},
-	pdf={Hogan et al. - 2023 - CS0 vs. CS1 Understanding Fears and Confidence a.pdf},
 	title = {{CS0} vs. {CS1}:: {Understanding} {Fears} and {Confidence} amongst {Non}-majors in {Introductory} {CS} {Courses}},
 	isbn = {978-1-4503-9431-4},
 	shorttitle = {{CS0} vs. {CS1}},
 	url = {https://dl.acm.org/doi/10.1145/3545945.3569865},
 	doi = {10.1145/3545945.3569865},
+	abstract = {Previous research has been devoted to improving the experience of non-majors in introductory CS courses. In this study, we compare the experiences of non-majors in two different introductory CS courses, specifically with respect to fears about taking the course and change in confidence levels. CS0 is a computing course intentionally designed for non-majors, and CS1 is a more traditional introductory computing course. Both of these courses were composed primarily of non-majors and were taught by the same instructor. Survey data was collected from 124 students enrolled in CS0, and 502 students enrolled in CS1. Through qualitative analysis, we found that the fears of non-major students entering both of these introductory CS courses fell into one or more of nine distinct categories (e.g., Coding, Perceiving STEM as Difficult, Managing Workload). Additionally, using students' confidence levels at the beginning and end of the courses, we found that students in CS0 had a greater increase in confidence level than those in CS1. Finally, we explored connections between students' fears and how their confidence changed by the end of the course. We found that students across both courses with fears related to coding, lack of preparation, and being left behind had the highest average increase in confidence levels.},
 	language = {en},
 	urldate = {2024-01-25},
 	booktitle = {Proceedings of the 54th {ACM} {Technical} {Symposium} on {Computer} {Science} {Education} {V}. 1},
@@ -18,25 +15,16 @@
 	month = mar,
 	year = {2023},
 	pages = {25--31},
-	file = {Full Text PDF:/Users/emmahogan/Zotero/storage/FYEJPL2S/Hogan et al. - 2023 - CS0 vs. CS1 Understanding Fears and Confidence a.pdf:application/pdf},
+	file = {CS0vsCS1:/Users/emmahogan/Zotero/storage/FYEJPL2S/Hogan et al. - 2023 - CS0 vs. CS1 Understanding Fears and Confidence a.pdf:application/pdf},
 }
 
 @inproceedings{shah_empirical_2023,
 	address = {Chicago IL USA},
 	title = {An {Empirical} {Evaluation} of {Live} {Coding} in {CS1}},
 	isbn = {978-1-4503-9976-0},
-	abstract = {Background and Context. Live coding is a teaching method in which an instructor dynamically writes code in front of students in an effort to impart skills such as incremental development and debugging. By contrast, traditional, static-code examples typically involve an instructor annotating or explaining components of pre-written code. Despite recommendations to use live coding and a wealth of qualitative analyses that identify perceived learning benefits of it, there are a lack of empirical evaluations to confirm those learning benefits, especially with respect to students' programming processes. Objectives. Our work aims to provide a holistic, empirical comparison of a live-coding pedagogy with a static-code one. We evaluated the impact of a live-coding pedagogy on three main areas: 1) students’ adherence to effective programming processes, 2) their performance on exams and assignments, and 3) their lecture experiences, such as engagement during lecture and perceptions of code examples. Method. In our treatment-control quasi-experimental setup, one lecture group saw live-coding examples while the other saw only static-code ones. Both lecture groups were taught by the same instructor, were taught the exact same content, and completed the same assignments and exams. We collected compilation-level programming process data, student performance on exam and homework questions, and feedback via a survey and course evaluations. Findings. Our findings showed no statistically significant differences between the live-coding and static-code groups on programming process metrics related to incremental development, debugging, and productivity. Similarly, there was no difference between the groups on course performance on assignments and exams. Finally, student feedback suggests that more students in the live-coding group reported that lectures were too fast and failed to facilitate note-taking, potentially mitigating the perceived benefits of live coding. Implications. Live coding alone may not lead to many of the perceived and intended benefits that prior work identifies, but future work may investigate how to realize these benefits while minimizing the drawbacks we identified.},
-	language = {en},
-	urldate = {2024-01-25},
-	booktitle = {Proceedings of the 2023 {ACM} {Conference} on {International} {Computing} {Education} {Research} {V}.1},
-	publisher = {ACM},
-	author = {Shah, Anshul and Hogan, Emma and Agarwal, Vardhan and Driscoll, John and Porter, Leo and Griswold, William G. and Soosai Raj, Adalbert Gerald},
-	month = aug,
-	year = {2023},
-	pages = {476--494},
-	file = {Full Text PDF:/Users/emmahogan/Zotero/storage/C4KS5BAW/Shah et al. - 2023 - An Empirical Evaluation of Live Coding in CS1.pdf:application/pdf},
-	html = {https://dl.acm.org/doi/10.1145/3568813.3600122},
+	url = {https://dl.acm.org/doi/10.1145/3568813.3600122},
 	doi = {10.1145/3568813.3600122},
+	abstract = {Background and Context. Live coding is a teaching method in which an instructor dynamically writes code in front of students in an effort to impart skills such as incremental development and debugging. By contrast, traditional, static-code examples typically involve an instructor annotating or explaining components of pre-written code. Despite recommendations to use live coding and a wealth of qualitative analyses that identify perceived learning benefits of it, there are a lack of empirical evaluations to confirm those learning benefits, especially with respect to students' programming processes. Objectives. Our work aims to provide a holistic, empirical comparison of a live-coding pedagogy with a static-code one. We evaluated the impact of a live-coding pedagogy on three main areas: 1) students’ adherence to effective programming processes, 2) their performance on exams and assignments, and 3) their lecture experiences, such as engagement during lecture and perceptions of code examples. Method. In our treatment-control quasi-experimental setup, one lecture group saw live-coding examples while the other saw only static-code ones. Both lecture groups were taught by the same instructor, were taught the exact same content, and completed the same assignments and exams. We collected compilation-level programming process data, student performance on exam and homework questions, and feedback via a survey and course evaluations. Findings. Our findings showed no statistically significant differences between the live-coding and static-code groups on programming process metrics related to incremental development, debugging, and productivity. Similarly, there was no difference between the groups on course performance on assignments and exams. Finally, student feedback suggests that more students in the live-coding group reported that lectures were too fast and failed to facilitate note-taking, potentially mitigating the perceived benefits of live coding. Implications. Live coding alone may not lead to many of the perceived and intended benefits that prior work identifies, but future work may investigate how to realize these benefits while minimizing the drawbacks we identified.},
 	language = {en},
 	urldate = {2024-01-25},
 	booktitle = {Proceedings of the 2023 {ACM} {Conference} on {International} {Computing} {Education} {Research} {V}.1},
@@ -52,11 +40,11 @@
 	address = {Turku Finland},
 	title = {The {Impact} of a {Remote} {Live}-{Coding} {Pedagogy} on {Student} {Programming} {Processes}, {Grades}, and {Lecture} {Questions} {Asked}},
 	isbn = {9798400701382},
-	html = {https://dl.acm.org/doi/10.1145/3587102.3588846},
+	url = {https://dl.acm.org/doi/10.1145/3587102.3588846},
 	doi = {10.1145/3587102.3588846},
+	abstract = {Live coding---a pedagogical technique in which an instructor plans, writes, and executes code in front of a class---is generally considered a best practice when teaching programming. However, only a few studies have evaluated the effect of live coding on student learning in a controlled experiment and most of the literature relating to live coding identifies students' perceived benefits of live-coding examples. In order to empirically evaluate the impact of live coding, we designed a controlled experiment in a CS1 course taught in Python at a large public university. In the two remote lecture sections for the course, one was taught using live-coding examples and the other was taught using static-code examples. Throughout the term, we collected code snapshots from students' programming assignments, students' grades, and the questions that they asked during the remote lectures. We then applied a set of process-oriented programming metrics to students' programming data to compare students' adherence to effective programming processes in the two learning groups and categorized each question asked in lectures following an open-coding approach. Our results revealed a general lack of difference between the two groups across programming processes, grades, and lecture questions asked. However, our experiment uncovered minimal effects in favor of the live-coding group indicating improved programming processes but lower performance on assignments and grades. Our results suggest an overall insignificant impact of the style of presenting code examples, though we reflect on the threats to validity in our study that should be addressed in future work.},
 	language = {en},
 	urldate = {2024-01-25},
-	abstract = {Live coding---a pedagogical technique in which an instructor plans, writes, and executes code in front of a class---is generally considered a best practice when teaching programming. However, only a few studies have evaluated the effect of live coding on student learning in a controlled experiment and most of the literature relating to live coding identifies students' perceived benefits of live-coding examples. In order to empirically evaluate the impact of live coding, we designed a controlled experiment in a CS1 course taught in Python at a large public university. In the two remote lecture sections for the course, one was taught using live-coding examples and the other was taught using static-code examples. Throughout the term, we collected code snapshots from students' programming assignments, students' grades, and the questions that they asked during the remote lectures. We then applied a set of process-oriented programming metrics to students' programming data to compare students' adherence to effective programming processes in the two learning groups and categorized each question asked in lectures following an open-coding approach. Our results revealed a general lack of difference between the two groups across programming processes, grades, and lecture questions asked. However, our experiment uncovered minimal effects in favor of the live-coding group indicating improved programming processes but lower performance on assignments and grades. Our results suggest an overall insignificant impact of the style of presenting code examples, though we reflect on the threats to validity in our study that should be addressed in future work.},
 	booktitle = {Proceedings of the 2023 {Conference} on {Innovation} and {Technology} in {Computer} {Science} {Education} {V}. 1},
 	publisher = {ACM},
 	author = {Shah, Anshul and Agarwal, Vardhan and Granado, Michael and Driscoll, John and Hogan, Emma and Porter, Leo and Griswold, William and Soosai Raj, Adalbert Gerald},
@@ -70,7 +58,7 @@
 	address = {Chicago IL USA},
 	title = {Engagement and {Anonymity} in {Online} {Computer} {Science} {Course} {Forums}},
 	isbn = {978-1-4503-9976-0},
-	html = {https://dl.acm.org/doi/10.1145/3568813.3600121},
+	url = {https://dl.acm.org/doi/10.1145/3568813.3600121},
 	doi = {10.1145/3568813.3600121},
 	abstract = {Online discussion boards, designed to facilitate learning from peers and instructors in an accessible space, are a vital part of course design, especially in large scale computer science classes. Previous work has shown that women in computer science tend to use anonymity more often than men on these boards, a trend not found in humanities, social science or business courses. In this work, we build on these findings using an intersectional lens, analyzing both gender and race/ethnicity. We find this combined analysis reveals differences in anonymity that are not apparent when examining gender alone. For example, we find a significantly greater difference in anonymity use between Hispanic men and women than would be expected from analyzing race/ethnicity and gender independently. We additionally analyze type of content (e.g., questions, answers), course, platform, and data source to characterize the many factors at play in measuring students’ choice to participate anonymously. In doing so, we show that different approaches used in prior work for eliciting information on gender — whether using registrar data, a survey, or imputing gender based on name — changes how over 20\% of students are classified, particularly affecting nonbinary students and Asian students. Understanding when students participate anonymously can help educators and platform designers to make students’ experience of online discussion boards more welcoming.},
 	language = {en},
@@ -86,8 +74,6 @@
 
 @phdthesis{hogan_role_2021,
 	type = {Undergraduate {Honors} {Thesis}},
-	selected={true},
-	html={https://cdm15739.contentdm.oclc.org/digital/collection/p15739coll1/id/337/rec/1},
 	title = {The {Role} of {Technology} in {Supporting} the {Learning} {Needs} of {All} {Levels} of {Incarcerated} {Students}: {A} {Supplement}, not a {Replacement}},
 	url = {https://cdm15739.contentdm.oclc.org/digital/collection/p15739coll1/id/337/rec/1},
 	abstract = {This research contributes to answering this question of how to improve correctional
@@ -111,10 +97,11 @@ recommendations on the role technology should have in the future of correctional
 	year = {2021},
 	file = {Snapshot:/Users/emmahogan/Zotero/storage/ERLCV25Z/1.html:text/html},
 }
+
 @misc{hogan_opinion_2021,
 	title = {{OPINION}: {Washington}’s {DOC} {Is} {Trapping} {Incarcerated} {Men} in {Solitary} {Confinement}},
 	shorttitle = {{OPINION}},
-	html = {https://southseattleemerald.com/2021/07/28/opinion-washingtons-doc-is-trapping-incarcerated-men-in-solitary-confinement/},
+	url = {https://southseattleemerald.com/2021/07/28/opinion-washingtons-doc-is-trapping-incarcerated-men-in-solitary-confinement/},
 	language = {en-US},
 	urldate = {2024-01-25},
 	journal = {South Seattle Emerald},
@@ -126,8 +113,7 @@ recommendations on the role technology should have in the future of correctional
 
 @misc{hogan_locked_2021,
 	title = {Locked out of life-saving education programs},
-	html = {https://www.postprisonedu.org/blog/eduaccess},
-	abstract = {Front facing, on their letterhead and websites, the Washington State Department of Corrections and legislature verbalize what they believe the voting public wants to read and hear.\&nbsp; However, behind closed doors, in caucus, in action, in reality, they are locking prisoners out of educational},
+	url = {https://www.postprisonedu.org/blog/eduaccess},
 	language = {en-US},
 	urldate = {2024-01-25},
 	journal = {Post-Prison Education Program},
