--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -206,6 +206,7 @@ open-ended programming assignment submissions, the three most popular being busi
 	address = {Portland OR USA},
 	title = {({Accepted}) {Challenges} and {Approaches} to {Teaching} {CS1} in {Prison}},
 	doi = {10.1145/3626252.3630802},
+	pdf = {SIGCSE23_cs1_in_prison.pdf}
 	abstract = {Efforts to bring incarcerated and formerly incarcerated individuals
 into the field of computing stand to improve equitable access to
 both computing jobs, and consequently the benefits of our tools and innovations through the inclusion of more diverse perspec-
