--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -145,6 +145,7 @@ recommendations on the role technology should have in the future of correctional
 	publisher = {arXiv},
 	author = {Cuevas, Alejandro and Hogan, Emma and Hibshi, Hanan and Christin, Nicolas},
 	month = apr,
+	arxiv = {2204.12601}
 	year = {2022},
 	note = {arXiv:2204.12601 [cs]},
 	keywords = {Computer Science - Cryptography and Security, Computer Science - Human-Computer Interaction},
@@ -163,11 +164,14 @@ open-ended programming assignment submissions, the three most popular being busi
 	author = {Hogan, Emma},
 	month = jan,
 	year = {2024},
+	html = {http://cseopenhouse.ucsd.edu/},
+	poster = {Hogan_CSE_Research_Open_House_2024.pdf}
 }
 
 @misc{hogan_challenges_2023,
 	address = {Atlanta Georgia USA},
 	type = {panel},
+	html = {https://www.higheredinprison.org/info/2023-nchep-schedule},
 	title = {Challenges and {Approaches} to {Teaching} {Computing} in {Prison}},
 	abstract = {Computer science (CS), and STEM fields in general, historically exclude people from underserved communities, who are overrepresented in the prison population. In higher education programs in prison, offerings of STEM courses are often limited, posing unique challenges to providing the same educational quality as found on traditional college campuses. For CS courses, technology infrastructure and policies make it difficult for instructors to make essential tools – such as code interpreters where students can run code – available to students. This puts students in computing courses at an undeniable disadvantage, as so much of the learning process of writing code is by doing: running code, understanding the output, and adjusting based on any errors. While students do not have access to technological tools and software needed for their education, instructors will have difficulty closing the gap between incarcerated and non-incarcerated students’ success. During this talk, I will share my experience as a CS instructor in prison, and discuss the barriers to learning computing in prison settings. I will also discuss practical solutions I have found to be effective, as well as ideas I have planned for future iterations of this course.},
 	author = {Hogan, Emma},
@@ -178,6 +182,8 @@ open-ended programming assignment submissions, the three most popular being busi
 @misc{hogan_cs0_2023-1,
 	address = {Toronto ON Canada},
 	type = {paper presentation},
+	html = {https://sigcse2023.sigcse.org/details/sigcse-ts-2023-papers/143/CS0-vs-CS1-Understanding-Fears-and-Confidence-amongst-Non-majors-in-Introductory-CS},
+	slides = {slides CS0 vs. CS1_ SIGCSE 2023 Presentation.pdf}
 	title = {{CS0} vs. {CS1}: {Understanding} {Fears} and {Confidence} amongst {Non}-majors in {Introductory} {CS} {Courses}},
 	abstract = {Previous research has been devoted to improving the experience of non-majors in introductory CS courses. In this study, we compare the experiences of non-majors in two different introductory CS courses, specifically with respect to fears about taking the course and change in confidence levels. CS0 is a computing course intentionally designed for non-majors, and CS1 is a more traditional introductory computing course. Both of these courses were composed primarily of non-majors and were taught by the same instructor. Survey data was collected from 124 students enrolled in CS0, and 502 students enrolled in CS1. Through qualitative analysis, we found that the fears of non-major students entering both of these introductory CS courses fell into one or more of nine distinct categories (e.g., Coding, Perceiving STEM as Difficult, Managing Workload). Additionally, using students' confidence levels at the beginning and end of the courses, we found that students in CS0 had a greater increase in confidence level than those in CS1. Finally, we explored connections between students' fears and how their confidence changed by the end of the course. We found that students across both courses with fears related to coding, lack of preparation, and being left behind had the highest average increase in confidence levels.},
 	author = {Hogan, Emma},
@@ -191,6 +197,7 @@ open-ended programming assignment submissions, the three most popular being busi
 	author = {Hogan, Emma and Allen, Kevin and Kohn, Ari},
 	month = oct,
 	year = {2021},
+	html = {https://kodxseattle.org/2022/03/03/post-prison-education-program-radio-show-03-03-22-2/}
 }
 
 @misc{hogan_lesson_2020,
@@ -200,13 +207,14 @@ open-ended programming assignment submissions, the three most popular being busi
 	author = {Hogan, Emma},
 	month = sep,
 	year = {2020},
+	html = {https://www.cylab.cmu.edu/events/partners_conference/2020/index.html}
 }
 
 @inproceedings{hogan_accepted_2024,
 	address = {Portland OR USA},
-	title = {({Accepted}) {Challenges} and {Approaches} to {Teaching} {CS1} in {Prison}},
+	title = {{\[Accepted\]} {Challenges} and {Approaches} to {Teaching} {CS1} in {Prison}},
 	doi = {10.1145/3626252.3630802},
-	pdf = {SIGCSE23_cs1_in_prison.pdf}
+	pdf = {SIGCSE23_cs1_in_prison.pdf},
 	abstract = {Efforts to bring incarcerated and formerly incarcerated individuals
 into the field of computing stand to improve equitable access to
 both computing jobs, and consequently the benefits of our tools and innovations through the inclusion of more diverse perspec-
