Fixed parsing issue

--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -145,7 +145,7 @@ recommendations on the role technology should have in the future of correctional
 	publisher = {arXiv},
 	author = {Cuevas, Alejandro and Hogan, Emma and Hibshi, Hanan and Christin, Nicolas},
 	month = apr,
-	arxiv = {2204.12601}
+	arxiv = {2204.12601},
 	year = {2022},
 	note = {arXiv:2204.12601 [cs]},
 	keywords = {Computer Science - Cryptography and Security, Computer Science - Human-Computer Interaction},
