--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -137,7 +137,7 @@ recommendations on the role technology should have in the future of correctional
 	file = {Snapshot:/Users/emmahogan/Zotero/storage/JVB5GRBR/eduaccess.html:text/html},
 }
 
-@misc{cuevas_observations_2022,
+@preprint{cuevas_observations_2022,
 	title = {Observations {From} an {Online} {Security} {Competition} and {Its} {Implications} on {Crowdsourced} {Security}},
 	url = {http://arxiv.org/abs/2204.12601},
 	abstract = {The crowd sourced security industry, particularly bug bounty programs, has grown dramatically over the past years and has become the main source of software security reviews for many companies. However, the academic literature has largely omitted security teams, particularly in crowd work contexts. As such, we know very little about how distributed security teams organize, collaborate, and what technology needs they have. We fill this gap by conducting focus groups with the top five teams (out of 18,201 participating teams) of a computer security Capture-the-Flag (CTF) competition. We find that these teams adopted a set of strategies centered on specialties, which allowed them to reduce issues relating to dispersion, double work, and lack of previous collaboration. Observing the current issues of a model centered on individual workers in security crowd work platforms, our study cases that scaling security work to teams is feasible and beneficial. Finally, we identify various areas which warrant future work, such as issues of social identity in high-skilled crowd work environments.},
@@ -153,7 +153,7 @@ recommendations on the role technology should have in the future of correctional
 	file = {arXiv.org Snapshot:/Users/emmahogan/Zotero/storage/DUELRLG5/2204.html:text/html;Full Text PDF:/Users/emmahogan/Zotero/storage/8URJYJCJ/Cuevas et al. - 2022 - Observations From an Online Security Competition a.pdf:application/pdf},
 }
 
-@misc{hogan_uncovering_2024,
+@presentation{hogan_uncovering_2024,
 	address = {University of California, San Diego},
 	type = {poster},
 	title = {Uncovering {Meaningful} {Computing} {Contexts} for {Incarcerated} {College} {Students}},
@@ -168,7 +168,7 @@ open-ended programming assignment submissions, the three most popular being busi
 	poster = {Hogan_CSE_Research_Open_House_2024.pdf}
 }
 
-@misc{hogan_challenges_2023,
+@presentation{hogan_challenges_2023,
 	address = {Atlanta Georgia USA},
 	type = {panel},
 	html = {https://www.higheredinprison.org/info/2023-nchep-schedule},
@@ -179,7 +179,7 @@ open-ended programming assignment submissions, the three most popular being busi
 	year = {2023},
 }
 
-@misc{hogan_cs0_2023-1,
+@presentation{hogan_cs0_2023-1,
 	address = {Toronto ON Canada},
 	type = {paper presentation},
 	html = {https://sigcse2023.sigcse.org/details/sigcse-ts-2023-papers/143/CS0-vs-CS1-Understanding-Fears-and-Confidence-amongst-Non-majors-in-Introductory-CS},
@@ -191,7 +191,7 @@ open-ended programming assignment submissions, the three most popular being busi
 	year = {2023},
 }
 
-@misc{hogan_thrown_2021,
+@presentation{hogan_thrown_2021,
 	type = {workshop},
 	title = {Thrown {Away} in {Our} {Prison} {System}: {How} {Poor} {People} of {Color} with {Mental} {Illness} are {Ostracized}},
 	author = {Hogan, Emma and Allen, Kevin and Kohn, Ari},
@@ -200,7 +200,7 @@ open-ended programming assignment submissions, the three most popular being busi
 	html = {https://kodxseattle.org/2022/03/03/post-prison-education-program-radio-show-03-03-22-2/}
 }
 
-@misc{hogan_lesson_2020,
+@presentation{hogan_lesson_2020,
 	address = {Pittsburgh, PA},
 	type = {poster},
 	title = {Lesson {Learned} for {Computer} {Security} {Teams} from {High}-{Performance} {CTF} {Teams}},
@@ -212,7 +212,7 @@ open-ended programming assignment submissions, the three most popular being busi
 
 @inproceedings{hogan_accepted_2024,
 	address = {Portland OR USA},
-	title = {{\[Accepted\]} {Challenges} and {Approaches} to {Teaching} {CS1} in {Prison}},
+	title = {{(Accepted)} {Challenges} and {Approaches} to {Teaching} {CS1} in {Prison}},
 	doi = {10.1145/3626252.3630802},
 	pdf = {SIGCSE23_cs1_in_prison.pdf},
 	abstract = {Efforts to bring incarcerated and formerly incarcerated individuals
