--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -111,7 +111,7 @@ recommendations on the role technology should have in the future of correctional
 	year = {2021},
 	file = {Snapshot:/Users/emmahogan/Zotero/storage/ERLCV25Z/1.html:text/html},
 }
-@misc{hogan_opinion_2021,
+@news{hogan_opinion_2021,
 	title = {{OPINION}: {Washington}’s {DOC} {Is} {Trapping} {Incarcerated} {Men} in {Solitary} {Confinement}},
 	shorttitle = {{OPINION}},
 	html = {https://southseattleemerald.com/2021/07/28/opinion-washingtons-doc-is-trapping-incarcerated-men-in-solitary-confinement/},
@@ -124,7 +124,7 @@ recommendations on the role technology should have in the future of correctional
 	file = {Snapshot:/Users/emmahogan/Zotero/storage/FWD7LZ92/opinion-washingtons-doc-is-trapping-incarcerated-men-in-solitary-confinement.html:text/html},
 }
 
-@misc{hogan_locked_2021,
+@news{hogan_locked_2021,
 	title = {Locked out of life-saving education programs},
 	html = {https://www.postprisonedu.org/blog/eduaccess},
 	abstract = {Front facing, on their letterhead and websites, the Washington State Department of Corrections and legislature verbalize what they believe the voting public wants to read and hear.\&nbsp; However, behind closed doors, in caucus, in action, in reality, they are locking prisoners out of educational},
@@ -170,6 +170,7 @@ open-ended programming assignment submissions, the three most popular being busi
 
 @presentation{hogan_challenges_2023,
 	address = {Atlanta Georgia USA},
+	slides = {Hogan NCHEP Presentation Slides.pdf}
 	type = {panel},
 	html = {https://www.higheredinprison.org/info/2023-nchep-schedule},
 	title = {Challenges and {Approaches} to {Teaching} {Computing} in {Prison}},
