--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -170,7 +170,7 @@ open-ended programming assignment submissions, the three most popular being busi
 
 @presentation{hogan_challenges_2023,
 	address = {Atlanta Georgia USA},
-	slides = {Hogan NCHEP Presentation Slides.pdf}
+	slides = {Hogan NCHEP Presentation Slides.pdf},
 	type = {panel},
 	html = {https://www.higheredinprison.org/info/2023-nchep-schedule},
 	title = {Challenges and {Approaches} to {Teaching} {Computing} in {Prison}},
