--- a/_bibliography/hogan.bib
+++ b/_bibliography/hogan.bib
@@ -211,9 +211,9 @@ open-ended programming assignment submissions, the three most popular being busi
 	html = {https://www.cylab.cmu.edu/events/partners_conference/2020/index.html}
 }
 
-@inproceedings{hogan_accepted_2024,
+@inproceedings{hogan_challenges_2024,
 	address = {Portland OR USA},
-	title = {{(Accepted)} {Challenges} and {Approaches} to {Teaching} {CS1} in {Prison}},
+	title = {{Challenges} and {Approaches} to {Teaching} {CS1} in {Prison}},
 	doi = {10.1145/3626252.3630802},
 	pdf = {SIGCSE23_cs1_in_prison.pdf},
 	abstract = {Efforts to bring incarcerated and formerly incarcerated individuals
